Create the Dealership

--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -7,7 +7,7 @@
 <p><%= @car.sale_price %></p>
 
 <ul>
-  <li><%= link_to "Go Back", "/" %></li>
+  <li><%= link_to "Go Back", cars_path %></li>
   <li><%= link_to "Edit", edit_car_path(@car) %></li>
   <li>
     <%=
