--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
   </head>
 
   <body>
+    <%= link_to 'Home', root_path %>
+    <%= link_to 'Cars', cars_path %>
+    <%= link_to 'Dealerships', dealerships_path %>
     <%= yield %>
   </body>
 </html>
