--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -5,6 +5,7 @@
 <p><%= @car.manufactured_at %></p>
 <p><%= @car.table_price %></p>
 <p><%= @car.sale_price %></p>
+<p><%= @car.dealership.name %></p>
 
 <ul>
   <li><%= link_to "Go Back", cars_path %></li>
