Create the Dealership (#4)

--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -5,9 +5,10 @@
 <p><%= @car.manufactured_at %></p>
 <p><%= @car.table_price %></p>
 <p><%= @car.sale_price %></p>
+<p><%= @car.dealership.name %></p>
 
 <ul>
-  <li><%= link_to "Go Back", "/" %></li>
+  <li><%= link_to "Go Back", cars_path %></li>
   <li><%= link_to "Edit", edit_car_path(@car) %></li>
   <li>
     <%=
